# onlinecoursedjangoapp

./: .env  Procfile  app.json  db.sqlite3  pyproject.toml  requirements.txt
onlinecourse/: asgi.py  settings.py  urls.py  wsgi.py
onlinecourseapp/: .env  admin.py  apps.py  models.py  urls.py  views.py
onlinecourseapp/migrations/: 0001_initial.py  0002_alter_choice_id_alter_course_id_alter_enrollment_id_and_more.py  0003_alter_course_name.py
onlinecourseapp/templates/onlinecourseapp/: course_detail_bootstrap.html  course_list_bootstrap.html  exam_result_bootstrap.html  user_login_bootstrap.html  user_registration_bootstrap.html
