[tool.poetry]
name = "onlinecoursedjango"
version = "1.0.0"
description = "an app for an online course"
authors = ["Henry Castillo <hcasti40@pratt.edu>"]


[tool.poetry.dependencies]
python = "3.9.8"
Django = "^4.0.1"
gunicorn = "^20.1.0"
Pillow = "^9.0.0"
django-heroku = "^0.3.1"
django-storages = "^1.12.3"
boto3 = "^1.20.34"
python-decouple = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"